add collection searching by name
